--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -1073,5 +1073,7 @@
   "Auto Legend": "",
   "East band": "",
   "North band": "",
-  "Has one band": ""
+  "Has one band": "",
+	"Select the Style Creation Type": "",
+  "You must fill the SLD field": ""
 }
