making store mandatory for dcp data series

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -940,7 +940,7 @@
   "Type here your analysis model": "Type here your analysis model",
   "Type is required": "Type is required",
   "Type to search": "Type to search",
-  "Unconfigured GraDs Data Series storage": "Unconfigured GraDs Data Series storage",
+  "Unconfigured Data Series storage": "Unconfigured Data Series storage",
   "Union": "Union",
   "Unknown property (not in schema)": "Unknown property (not in schema)",
   "User": "User",
