--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -944,7 +944,7 @@
   "Type here your analysis model": "Digite aqui seu modelo de análise",
   "Type is required": "O preenchimento do tipo é obrigatório",
   "Type to search": "Digite para pesquisar",
-  "Unconfigured GraDs Data Series storage": "Não configurado armazenamento de série de dados GraDs",
+  "Unconfigured Data Series storage": "Não configurado armazenamento de série de dados",
   "Union": "União",
   "Unknown property (not in schema)": "Propriedade desconhecida (não está no esquema)",
   "User": "Usuário",
