--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -356,6 +356,7 @@
   "Filter by limits": "Filtrar por limites",
   "Filter by static data": "Filtro por dado estático",
   "Filters": "Filtros",
+	"Final Value": "Valor final",
   "Finalizing": {
     "": {
       "": {
@@ -471,6 +472,7 @@
   "Influence is required": "Influência é requerida",
   "Influence radius is required": "Raio de Influência é requerido",
   "Information": "Informação",
+	"Initial Value": "Valor inicial",
   "Input Data": "Dado de Entrada",
   "Insert a value if you want to update the password": "Insira um valor caso queira atualizar a senha",
   "Insert the Color": "Insira a Cor",
@@ -708,6 +710,7 @@
   "PostGis occurrence": "Ocorrência PostGIS",
   "Pre-Analysis": "Pré-Análises",
   "Pre-processing": "Pre-processamento",
+	"Precision": "Precisão",
   "Prefix": "Prefixo",
   "Previous": "Anterior",
   "Private": "Privado",
