--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -1078,5 +1078,8 @@
 	"Initial Value": "",
 	"Final Value": "",
 	"Select the Style Creation Type": "",
-  "You must fill the SLD field": ""
+  "You must fill the SLD field": "",
+  "Can not remove this data provider": {
+    " It is used in the following data series": ""
+  }
 }
