Button to uncheck all visible layers

--- a/webmonitor/locales/en.json
+++ b/webmonitor/locales/en.json
@@ -98,6 +98,7 @@
   "To": "To",
   "TO-COLON": "To:",
   "total entries)": "total entries)",
+  "Uncheck all layers": "Uncheck all layers",
   "Username": "Username",
   "Verifying data for export<span>...</span>": "Verifying data for export<span>...</span>",
   "VISIBLE LAYERS": "VISIBLE LAYERS",
