--- a/webmonitor/locales/es.json
+++ b/webmonitor/locales/es.json
@@ -99,6 +99,7 @@
   "TO-COLON": "To:",
   "total entries)": "total entries)",
   "Username": "Username",
+  "Uncheck all layers": "Uncheck all layers",
   "Verifying data for export<span>...</span>": "Verifying data for export<span>...</span>",
   "VISIBLE LAYERS": "VISIBLE LAYERS",
   "WEEK-LABEL": "W",
