--- a/webmonitor/locales/pt.json
+++ b/webmonitor/locales/pt.json
@@ -98,6 +98,7 @@
   "To": "Até",
   "TO-COLON": "Até:",
   "total entries)": "registros)",
+  "Uncheck all layers": "Desmarcar todas camadas",
   "Username": "Usuário",
   "Verifying data for export<span>...</span>": "Verificando dados para exportação<span>...</span>",
   "VISIBLE LAYERS": "CAMADAS VISÍVEIS",
