ES web monitor locale

--- a/webmonitor/locales/es.json
+++ b/webmonitor/locales/es.json
@@ -1,28 +1,28 @@
 {
-  "(filtered from": "(filtered from",
-  "0% Complete": "0% Complete",
-  "About": "About",
-  "ABOUT-TEXT": "This project is part of the Programa Cerrado, an iniciative of cooperation between the British and Brazilian governments, with the support of the World Bank. The Brazilian Ministry of the Enviroment (MMA), through its Climate Change and Environmental Quality Secretariat (SMCQ), is the responsible for the general coordination of the program. The objective of the iniciative is to contribute for the mitigation of climate change and for the improvement of the management of natural resources in the Brazilian Cerrado, through enhancement of public politics and farmers practices.",
+  "(filtered from": "(filtrado de",
+  "0% Complete": "0% Completo",
+  "About": "Sobre",
+  "ABOUT-TEXT": "Este proyecto forma parte integrante del Programa Cerrado, una iniciativa de cooperación entre los gobiernos de Brasil y del Reino Unido, con el apoyo del Banco Mundial. El Ministerio de Medio Ambiente (MMA), a través de su Secretaría de Cambio Climático y Calidad Ambiental (SMCQ), es el responsable de la coordinación general del programa. El objetivo de la iniciativa es contribuir a la mitigación del cambio climático y la mejora de la gestión de recursos naturales en el bioma Cerrado por medio del perfeccionamiento de políticas públicas y de prácticas de productores rurales.",
   "Add Layers": "Añadir Capas",
   "Add": "Añadir",
   "Alerts": "Alertas",
   "All Formats": "Todos los Formatos",
-  "Almost there! The file is being prepared for download<span>...</span>": "Almost there! The file is being prepared for download<span>...</span>",
+  "Almost there! The file is being prepared for download<span>...</span>": "¡Casi allí! El archivo se está preparando para su descarga.<span>...</span>",
   "Analysis": "Análisis",
-  "Animation": "Animation",
-  "Animation controls": "Animation controls",
-  "Apply": "Apply",
+  "Animation": "Animación",
+  "Animation controls": "Controles de animación",
+  "Apply": "Aplicar",
   "April": "Abril",
   "ATTRIBUTES-OF-LAYER-COLON": "Atributos de la capa: ",
   "August": "Agosto",
-  "Auto update on": "Auto update on",
-  "Auto update off": "Auto update off",
+  "Auto update on": "Actualización automática ativada",
+  "Auto update off": "Actualización automática desactivada",
   "Cancel": "Cancelar",
-  "CAPABILITIES-ERROR": "Error to find capabilities.",
-  "Close": "Close",
-  "Complete": "Complete",
+  "CAPABILITIES-ERROR": "Error al encontrar capabilities.",
+  "Close": "Cerrar",
+  "Complete": "Completar",
   "CSV": "CSV",
-  "Custom": "Custom",
+  "Custom": "Personalizado",
   "DATE-FORMAT": "MM/DD/YYYY",
   "DAY-SU": "Do",
   "DAY-MO": "Lu",
@@ -34,17 +34,17 @@
   "Days": "Días",
   "December": "Diciembre",
   "Description": "Descripción",
-  "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)": "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)",
+  "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)": "Plataforma digital de monitoreo y alerta de incendios forestales en el Cerrado brasileño (Banco Mundial TF018566).",
   "Dynamic Data": "Datos Dinámicos",
-  "entries": "entries",
-  "Export Data": "Export Data",
+  "entries": "entradas",
+  "Export Data": "Exportar datos",
   "Exportation": "Exportación",
-  "Externals": "Externals",
+  "Externals": "Externos",
   "February": "Febrero",
-  "FILE-NOT-FOUND": "File not found.",
-  "First": "First",
-  "From": "From",
-  "FROM-COLON": "From:",
+  "FILE-NOT-FOUND": "Archivo no encontrado.",
+  "First": "Primero",
+  "From": "De",
+  "FROM-COLON": "De:",
   "GeoJSON": "GeoJSON",
   "Hours": "Horas",
   "INCORRECT-PASSWORD": "Contraseña incorrecto.",
@@ -55,55 +55,55 @@
   "June": "Junio",
   "July": "Julio",
   "KML": "KML",
-  "Last": "Last",
+  "Last": "Último",
   "Layer Name": "Nombre de la capa",
   "Layer Tools": "Herramientas de la capa",
   "LAYERS-COLON": "Capas:",
-  "Legends": "Legends",
-  "Load State": "Load State",
-  "LOADING": "Loading...",
-  "Map Server is not responding": "Map Server is not responding",
-  "March": "marzo",
-  "May": "mayo",
+  "Legends": "Leyendas",
+  "Load State": "Estado de carga",
+  "LOADING": "Cargando...",
+  "Map Server is not responding": "Map Server no responde",
+  "March": "Marzo",
+  "May": "Mayo",
   "Minutes": "Minutos",
-  "Missing credentials": "Missing credentials.",
+  "Missing credentials": "Faltan credenciales.",
   "Next": "Siguiente",
-  "No data available in table": "No data available in table",
-  "No matching records found": "No matching records found",
-  "NO-DATA": "No data to show.",
+  "No data available in table": "No hay datos disponibles en la tabla.",
+  "No matching records found": "No se encontraron registros coincidentes.",
+  "NO-DATA": "Sin datos para mostrar.",
   "November": "Noviembre",
   "October": "Octubre",
   "of": "de",
-  "Opacity": "Opacity",
+  "Opacity": "Opacidad",
   "Password": "Contraseña",
-  "PERIOD-COLON": "Period:",
-  "Please wait, the requested data is being exported<span>...</span>": "Please wait, the requested data is being exported<span>...</span>",
+  "PERIOD-COLON": "Período:",
+  "Please wait, the requested data is being exported<span>...</span>": "Por favor espere, se está exportando los datos solicitados<span>...</span>",
   "Previous": "Anterior",
   "PROCESSING": "Procesamiento...",
-  "Project <em>Platform of Monitoring and Warning of Forest Fires in the Cerrado</em> (ProCerrado INPE)": "Project <em>Platform of Monitoring and Warning of Forest Fires in the Cerrado</em> (ProCerrado INPE)",
-  "Properties": "Properties",
-  "REALIZATION": "REALIZATION",
-  "Restart": "Restart",
-  "Save changes": "Save changes",
-  "Save State": "Save State",
+  "Project <em>Platform of Monitoring and Warning of Forest Fires in the Cerrado</em> (ProCerrado INPE)": "Proyecto <em>Plataforma de Monitoreo y Alerta de Incendios Forestales en el Cerrado </em> (ProCerrado INPE)",
+  "Properties": "Propiedades",
+  "REALIZATION": "REALIZACIÓN",
+  "Restart": "Reiniciar",
+  "Save changes": "Guardar cambios",
+  "Save State": "Guardar Estado",
   "SEARCH-COLON": "Buscar:",
   "September": "Septiembre",
   "Shapefile": "Shapefile",
-  "Show": "Show",
-  "Showing": "Showing",
-  "Showing 0 to 0 of 0 entries": "Showing 0 to 0 of 0 entries",
+  "Show": "Mostrar",
+  "Showing": "Demostración",
+  "Showing 0 to 0 of 0 entries": "Mostrando 0 a 0 de 0 entradas",
   "Sign In": "Ingresar",
   "Sign out": "Cerrar sesión",
   "Static Data": "Datos Estáticos",
   "Templates": "Templates",
-  "to": "to",
-  "To": "To",
-  "TO-COLON": "To:",
-  "total entries)": "total entries)",
+  "to": "para",
+  "To": "Para",
+  "TO-COLON": "Para:",
+  "total entries)": "entradas totales)",
   "Username": "Nombre de usuario",
-  "Uncheck all layers": "Uncheck all layers",
-  "Verifying data for export<span>...</span>": "Verifying data for export<span>...</span>",
-  "VISIBLE LAYERS": "VISIBLE LAYERS",
+  "Uncheck all layers": "Desmarque todas las capas",
+  "Verifying data for export<span>...</span>": "Verificando datos para exportar<span>...</span>",
+  "VISIBLE LAYERS": "CAPAS VISIBLES",
   "WEEK-LABEL": "W",
   "WFS": "WFS",
   "WMS": "WMS",
