--- a/webmonitor/locales/es.json
+++ b/webmonitor/locales/es.json
@@ -2,6 +2,13 @@
   "(filtered from": "(filtrado de",
   "0% Complete": "0% Completo",
   "About": "Sobre",
+  "ABOUT-TEXT-1": "The TerraMA² platform is a software product, a computational system, based on services arquitecture, open source, that provides the tecnological infrastructure needed to develop operational systems for monitoring alerts of environmental risks.",
+  "ABOUT-TEXT-2": "TerraMA² it's an open source and free of charge software, available for distribution and modification under the terms of the GNU Lesser General Public Licence version 4, as published by the Free Software Foundation.",
+  "ABOUT-TEXT-3": "Comments, suggestions or problems can be submitted to the TerraMA² team (terrama2@dpi.inpe.br) at the Images Processing Division (DPI) at the Brazilian National Institute for Space Research (INPE).",
+  "ABOUT-TEXT-4": "TerraMA² Version: 4.0.0",
+  "ABOUT-TEXT-5": "TerraLib Version: 5.2.4",
+  "ABOUT-TEXT-6": "Version Release Date: Dec/15/2017",
+  "ABOUT-TEXT-7": "This version was funded by the World Bank TF018566 as part of the Programa Cerrado, an iniciative of cooperation between the British and Brazilian governments, with the support of the World Bank. The Brazilian Ministry of the Enviroment (MMA), through its Climate Change and Environmental Quality Secretariat (SMCQ), is responsible for the general coordination of the program. The objective of the iniciative is to contribute for the mitigation of climate change and the improvement of the management of natural resources in the Brazilian Cerrado, through enhancement of public politics and farmers practices.",
   "ABOUT-TEXT": "Este proyecto forma parte integrante del Programa Cerrado, una iniciativa de cooperación entre los gobiernos de Brasil y del Reino Unido, con el apoyo del Banco Mundial. El Ministerio de Medio Ambiente (MMA), a través de su Secretaría de Cambio Climático y Calidad Ambiental (SMCQ), es el responsable de la coordinación general del programa. El objetivo de la iniciativa es contribuir a la mitigación del cambio climático y la mejora de la gestión de recursos naturales en el bioma Cerrado por medio del perfeccionamiento de políticas públicas y de prácticas de productores rurales.",
   "Add Layers": "Añadir Capas",
   "Add": "Añadir",
