About page espanish translation, translations of predefined styles

--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -139,6 +139,7 @@
   "Bi linear": "Bi linear",
   "Biggest grid": "Grade maior",
   "Binary File Mask": "Máscara do arquivo binário",
+  "Biomes": "Biomas",
   "Buffer": "Buffer",
   "Bytes After": "Bytes posteriores",
   "Bytes Before": "Bytes anteriores",
@@ -195,6 +196,7 @@
   "Connection timeout, verify the port": "Tempo limite de conexão excedido, verifique a porta",
   "Connection timeout, verify the port. Important! Make sure the server's REST API is enabled": "Tempo limite de conexão excedido, verifique a porta. Importante! Certifique-se de que a API REST do servidor está habilitada",
   "Connection with service refused, check if the service is running!": "Conexão com o serviço recusada, verifique se o mesmo está em execução!",
+  "Conservation Units": "Unidades de conservação",
   "Convert all": "Converter todos",
   "Could not remove legend SequelizeForeignKeyConstraintError: update or delete on table \"legends\" violates foreign key constraint \"alerts_legend_id_fkey\" on table \"alerts\"": "Não foi possível remover a legenda: a legenda está sendo usada por um alerta.",
   "Could not remove project with data provider associated": "Could not remove project with data provider associated",
@@ -204,6 +206,8 @@
   "Could not save data series due:  project_id: project_id must be unique,\nname: name must be unique": "Não foi possível salvar a série de dados, já existe um registro com o nome inserido, e o nome deve ser único.",
   "Could not save project: name must be unique": "Não foi possível salvar o projeto, já existe um registro com o nome inserido, e o nome deve ser único.",
   "Count": "Contagem",
+  "Counties": "Municípios",
+  "Countries": "Países",
   "Create View": "Criar Visualização",
   "Creation Type": "Tipo de criação",
   "Crop raster": "Recortar Matriz",
@@ -294,6 +298,7 @@
   "Date (local time)": "Data (horário local)",
   "Date Time": "Data Hora",
   "Days": "Dias",
+  "Days Without Rain": "Dias sem chuva",
   "Dcp": "Pcd",
   "Dcp Data Series": "Séries de Dados PCD",
   "Default": "Padrão",
@@ -430,6 +435,7 @@
   "Host not found": "Endereço não encontrado",
   "Host service error": "Erro no executável do serviço: ",
   "Hours": "Horas",
+  "Humidity": "Umidade",
   "HTTP": "HTTP",
   "HTTPS": "HTTPS",
   "I forgot my password": "Eu esqueci minha senha",
@@ -721,6 +727,7 @@
   "PostGis occurrence": "Ocorrência PostGIS",
   "Pre-Analysis": "Pré-Análises",
   "Pre-processing": "Pre-processamento",
+  "Precipitation": "Precipitação",
   "Precision": "Precisão",
   "Prefix": "Prefixo",
   "Previous": "Anterior",
@@ -770,6 +777,7 @@
   "Resolution X": "Resolução X",
   "Resolution Y": "Resolução Y",
   "Resolution is required": "Resolução é requerida",
+  "Risk of Fire": "Risco de fogo",
   "Run": "Executar",
   "SLD": "SLD",
   "SRID": "SRID",
@@ -883,6 +891,7 @@
       }
     }
   },
+  "States": "Estados",
   "Static": "Estático",
   "Static Data": "Dados Estáticos",
   "Static Data Registration": "Registro de Dado Estático",
@@ -907,6 +916,8 @@
   "Table Name": "Nome da tabela",
   "Table_name": "Nome da tabela",
   "table_name": "Nome da tabela",
+  "Temperature (Kelvin)": "Temperatura (Kelvin)",
+  "Temperature (Celsius)": "Temperatura (Celsius)",
   "Temporal": "Temporal",
   "Test connection": "Testar Conexão",
   "TerraMA² data directory": "Diretório de dados do TerraMA²",
@@ -996,6 +1007,7 @@
   "Variance": "Variância",
   "Vector": "Vetor",
   "Vector Files (ESRI Shapefile)": "Arquivos Vetoriais (ESRI Shapefile)",
+  "Vegetation Fire": "Focos",
   "Version": "Versão",
   "View": "Visualização",
   "View Data Series": "Séries de Dados de Visualizações",
@@ -1018,6 +1030,7 @@
   "When the value is 0, it will use thread number supported by the server": "Quando o valor for 0, será utilizado o número de threads suportado pelo servidor",
   "When value is 0, the default will be supported threads by server": "Quando o valor é 0, o padrão de threads será definido pelo servidor",
   "Wild fire event (ESRI Shapefile)": "Evento de queimada (ESRI Shapefile)",
+  "Wind": "Vento",
   "Wizard mode": "Modo assistente",
   "X": "X",
   "X is invalid number": "X é um número inválido",
