Fixing the bug of the alert 'Notify on legend level' option

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -548,6 +548,7 @@
   "Latitude / Y (m)": "Latitude / Y (m)",
   "Latitude is invalid": "Latitude is invalid",
   "Leave it empty": "Leave it empty",
+  "Legend attribute is invalid": "Legend attribute is invalid",
   "Legend Registration": "Legend Registration",
   "Level Name": "Level Name",
   "Lightning occurrence": "Lightning occurrence",
@@ -797,6 +798,7 @@
   "Search": "Search",
   "Seconds": "Seconds",
   "Select": "Select",
+  "Select a level in the 'Notify on legend level' option!": "Select a level in the 'Notify on legend level' option!",
   "Select a Project": "Select a Project",
   "Select Area of Interest": "Select Area of Interest",
   "Select Attibutes": "Select Attibutes",
