--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -558,6 +558,7 @@
   "Legend Registration": "Registro de Legenda",
   "Legend Value": "Valor da Legenda",
   "Legend attribute": "Atributo da Legenda",
+  "Legend attribute is invalid": "O atributo da legenda é inválido",
   "Legend attribute is required": "O preenchimento do atributo da legenda é obrigatório",
   "Legend band": "Banda da legenda",
   "Legend band is required": "O preenchimento da banda de legenda é obrigatório",
@@ -800,6 +801,7 @@
   "Search": "Pesquisa",
   "Seconds": "Segundos",
   "Select": "Selecionar",
+  "Select a level in the 'Notify on legend level' option!": "Selecione um nível na opção 'Notificar a partir do nível'!",
   "Select a Project": "Selecione um Projeto",
   "Select Area of Interest": "Selecione Área de Interesse",
   "Select Attibutes": "Selecione atributos",
