--- a/webmonitor/locales/en.json
+++ b/webmonitor/locales/en.json
@@ -49,6 +49,7 @@
   "Externals": "Externals",
   "February": "February",
   "FILE-NOT-FOUND": "File not found.",
+  "Filter": "Filter",
   "First": "First",
   "From": "From",
   "FROM-COLON": "From:",
