--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -1107,5 +1107,6 @@
 	" but the TerraMA² service version is ": " but the TerraMA² service version is ",
 	". Some operations may not work properly": ". Some operations may not work properly",
 	"It seems you are using different versions of TerraMA². Current version of TerraMA² Web is ": "It seems you are using different versions of TerraMA². Current version of TerraMA² Web is ",
-	"Invalid SRID!": "Invalid SRID!"
+	"Invalid SRID!": "Invalid SRID!",
+	"Invalid filter SRID.": "Invalid filter SRID."
 }
