minor translation fix

--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -247,7 +247,7 @@
   "Data Series Registration": "Registro de Série de Dados",
   "Data Series import": "Importação de série de dados",
   "Data Series is required": "O preenchimento da série de dados é obrigatório",
-  "Data series to interpolate": "Data series para interpolar",
+  "Data series to interpolate": "Série de Dados para Interpolar",
   "Data Server": "Servidor de Dados",
   "Data Server Description": "Descrição do Servidor de Dados",
   "Data Server Name": "Nome do Servidor de Dados",
@@ -1108,5 +1108,5 @@
   "updated": "atualizado",
   "w": "w",
 	"DCP - PostGIS (Single Table)": "DCP - PostGIS (Tabela única)",
-	"DCP - PostGIS (N-Table)": "DCP - PostGIS (N-Tabelas)"
+  "DCP - PostGIS (N-Table)": "DCP - PostGIS (N-Tabelas)"
 }
