--- a/packages/debian-package/README
+++ b/packages/debian-package/README
@@ -1,3 +1,3 @@
-To run the scripts that create a debia package, first install these packages: 
+To run the scripts that create a debian package, first install these packages: 
 - debhelper
 - devscripts
