Fix risk of fire style legend

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -207,7 +207,7 @@
   "Could not save data series due:  project_id: project_id must be unique,\nname: name must be unique": "Could not save data series due: name must be unique.",
   "Could not save project: name must be unique": "Could not save project: name must be unique",
   "Count": "Count",
-  "Counties": "Counties",
+  "Cities": "Cities",
   "Countries": "Countries",
   "Create View": "Create View",
   "Creation Type": "Creation Type",
