Created a panel to show the charts

--- a/webmonitor/locales/pt.json
+++ b/webmonitor/locales/pt.json
@@ -27,6 +27,7 @@
   "Cancel": "Cancelar",
   "CAPABILITIES-ERROR": "Erro ao encontrar o capabilities.",
   "Close": "Fechar",
+  "Charts": "Gráficos",
   "Complete": "Completo",
   "CSV": "CSV",
   "Custom": "Personalizado",
