--- a/webmonitor/locales/en.json
+++ b/webmonitor/locales/en.json
@@ -26,6 +26,7 @@
   "Auto update off": "Auto update off",
   "Cancel": "Cancel",
   "CAPABILITIES-ERROR": "Error to find capabilities.",
+  "Charts": "Charts",
   "Close": "Close",
   "Complete": "Complete",
   "CSV": "CSV",
