translate to portuguese

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -184,6 +184,7 @@
   "Column is required": "Column is required",
   "Comma": "Comma",
   "Commands": "Commands",
+  "Compact": "Compact",
   "Condition": "Condition",
   "Conditioned": "Conditioned",
   "Confirm": "Confirm",
@@ -319,6 +320,8 @@
   "Dynamic Data": "Dynamic Data",
   "Dynamic Data Registration": "Dynamic Data Registration",
   "Dynamic Data Series": "Dynamic Data Series",
+  "Dynamic/Analysis data": "Dynamic/Analysis data",
+  "Dynamic/analysis data is required" : "Dynamic/analysis data is required",
   "E-mail": "E-mail",
   "East band": "East band",
   "Edit": "Edit",
@@ -337,6 +340,7 @@
   "Encoding": "Encoding",
   "Enter the file name!": "Enter the file name!",
   "Enter the table name!": "Enter the table name!",
+  "Erase everything": "Erase everything",
   "Error!": "Error!",
   "Error": "Error",
   "End": "End",
@@ -688,6 +692,7 @@
   "PCD Data Registration": "PCD Data Registration",
   "POSTGIS": "POSTGIS",
   "Parameters": "Parameters",
+  "Partial erase": "Partial erase",
   "Password": "Password",
   "Password did not match for the confirmation password": "Password did not match for the confirmation password",
   "Password is required": "Password is required",
@@ -779,6 +784,7 @@
   "Legend band": "Legend band",
   "Legend band is required": "Legend band is required",
   "Legends": "Legends",
+  "Redefine start (Filter date will be considered)": "Redefine start (Filter date will be considered)",
   "Run": "Run",
   "SLD": "SLD",
   "SRID": "SRID",
@@ -846,6 +852,7 @@
   "Service Name": "Service Name",
   "Service Port": "Service Port",
   "Service Registration": "Service Registration",
+  "Service data is required": "Service data is required",
   "Service error": "Service error",
   "Service info": "Service info",
   "Service is required": "Service is required",
@@ -906,8 +913,13 @@
   "Stop": "Stop",
   "Stop all": "Stop all",
   "Stop all services": "Stop all services",
+  "Storage": "Storage",
   "Storager": "Storager",
+  "Storage Registration": "Storage Registration",
   "Store": "Store",
+  "Store data": "Store data",
+  "Store data data is required": "Store data data is required",
+  "Store removed data history": "Store removed data history",
   "Strategy": "Strategy",
   "Style": "Style",
   "Success!": "Success!",
@@ -920,6 +932,8 @@
   "Table Name": "Table Name",
   "Table_name": "Table name",
   "table_name": "Table name",
+  "Table name": "Table name",
+  "Table name is required" : "Table name is required",
   "Temperature (Kelvin)": "Temperature (Kelvin)",
   "Temperature (Celsius)": "Temperature (Celsius)",
   "Temporal": "Temporal",
@@ -946,6 +960,8 @@
   "Time Unit": "Time Unit",
   "Time Units": "Time Units",
   "Time unit is required": "Time unit is required",
+  "Time interval": "Time interval",
+  "Time unit": "Time unit",
   "Timeout": " Request took longer than ",
   "Timeout: Request took longer than ": "Timeout: Request took longer than ",
   "Timestamp property": "Timestamp property",
