--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -185,6 +185,7 @@
   "Column is required": "Coluna é requerido",
   "Comma": "Vírgula",
   "Commands": "Comandos",
+  "Compact": "Compactar",
   "Condition": "Condição",
   "Conditional": "Condicional",
   "Conditioned": "Condicionado",
@@ -321,6 +322,8 @@
   "Dynamic Data": "Dados Dinâmicos",
   "Dynamic Data Registration": "Registro de Dado Dinâmico",
   "Dynamic Data Series": "Séries de Dados Dinâmicos",
+  "Dynamic/Analysis data": "Dados Dinâmicos/Análise",
+  "Dynamic/analysis data is required" : "Dados Dinâmicos/Análise é obrigatório",
   "E-mail": "E-mail",
   "East band": "Banda leste",
   "Edit": "Editar",
@@ -344,6 +347,7 @@
   "Enter the table name!": "Insira o nome da tabela!",
   "Enviroment": "Ambiente",
   "Enviroment Variables": "Variáveis de Ambiente",
+  "Erase everything": "Apagar tudo",
   "Error": "Erro",
   "Error!": "Erro!",
   "Error: Error occurred during the service startup. Error: Error: exit code 127": "Erro: Ocorreu um erro durante a inicialização do serviço. O executável do serviço não foi encontrado.",
@@ -700,6 +704,7 @@
   "PCD": "PCD",
   "PCD Data Registration": "Registro de dados de PCD",
   "Parameters": "Parâmetros",
+  "Partial erase": "Apagar parcial",
   "Password": "Senha",
   "Password did not match for the confirmation password": "A senha e a confirmação não coincidem",
   "Password is required": "O preenchimento da senha é obrigatório",
@@ -762,6 +767,7 @@
   "Python": "Python",
   "Radius": "Raio",
   "Raster": "Matriz",
+  "Redefine start (Filter date will be considered)": "Redefinir início (Será considerada a data do filtro)",
   "Register a new membership": "Registrar um novo membro",
   "Remember Me": "Lembrar de mim",
   "Remember me": "Lembrar de mim",
@@ -844,6 +850,7 @@
   "Service": "Serviço",
   "Service  Name": "Nome do Serviço",
   "Service Data": "Serviço de Dados",
+  "Service data is required": "Serviço de dados é obrigatório",
   "Service Description": "Descrição do Serviço",
   "Service Executable Path": "Caminho do Executável do Serviço",
   "Service Name": "Nome do Serviço",
@@ -909,8 +916,13 @@
   "Stop": "Parar",
   "Stop all": "Parar todos",
   "Stop all services": "Parar todos serviços",
+  "Storage": "Armazenamento",
   "Storager": "Armazenamento",
+  "Storage Registration": "Registro do Armazenamento",
   "Store": "Armazenar",
+  "Store data": "Servidor de Dados Destino",
+  "Store data data is required": "Servidor de Dados Destino é obrigatório",
+  "Store removed data history": "Armazenar dados removidos",
   "Strategy": "Estratégia",
   "Style": "Estilo",
   "Success!": "Sucesso!",
@@ -923,6 +935,8 @@
   "Table Name": "Nome da tabela",
   "Table_name": "Nome da tabela",
   "table_name": "Nome da tabela",
+  "Table name": "Nome da tabela",
+  "Table name is required" : "Nome da tabela é obrigatório",
   "Temperature (Kelvin)": "Temperatura (Kelvin)",
   "Temperature (Celsius)": "Temperatura (Celsius)",
   "Temporal": "Temporal",
@@ -949,6 +963,8 @@
   "Time Unit": "Unidade de tempo",
   "Time Units": "Unidade de Tempo",
   "Time unit is required": "Unidade de tempo é requerido",
+  "Time interval": "Intervalo de tempo",
+  "Time unit": "Unidade de tempo",
   "Timeout": " A requisição demorou mais que ",
   "Timeout: Request took longer than ": "Tempo Limite do Servidor de Dados: A requisição demorou mais que ",
   "Timestamp property": "Propriedade de tempo",
